--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,31 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favico.ico">
-    <title>snpt</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favico.ico" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <title>Snpt - A simple snippets app.</title>
+    <meta name="author" content="Chetan Raj <chetan.narian@gmail.com>" />
+    <meta name="description" content="✂️A simple snippets app." />
+
+    <meta property="og:title" content="Snpt - ✂️A simple snippets app." />
+    <meta property="og:url" content="https://snpt.netlify.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="✂️A simple snippets app." />
+    <meta property="og:image" content="./snpt.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://snpt.netlify.com/" />
+    <meta property="twitter:title" content="Snpt" />
+    <meta property="twitter:description" content="✂️A simple snippets app." />
+    <meta property="twitter:image" content="./snpt.png" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
