Made the title short

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favico.ico" />
 
-    <title>Snpt - A simple snippets app.</title>
+    <title>Snpt</title>
     <meta name="author" content="Chetan Raj <chetan.narian@gmail.com>" />
     <meta name="description" content="✂️A simple snippets app." />
 
